--- a/app/src/main/res/layout/activity_bebop.xml
+++ b/app/src/main/res/layout/activity_bebop.xml
@@ -6,7 +6,7 @@
     tools:context=".activity.BebopActivity"
     android:id="@+id/piloting_view">
 
-    <com.parrot.sdksample.view.BebopVideoView
+    <ch.epfl.droneproject.view.BebopVideoView
         android:id="@+id/videoView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
