--- a/app/src/main/res/layout/activity_device_list.xml
+++ b/app/src/main/res/layout/activity_device_list.xml
@@ -10,9 +10,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".activity.DeviceListActivity">
 
-    <ListView
-        android:id="@+id/list"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent">
-    </ListView>
+    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefresh"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent">
+
+        <ListView
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></ListView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </FrameLayout>
