learning sdk and take advantage of skycontroller2

--- a/app/src/main/res/layout/activity_skycontroller2.xml
+++ b/app/src/main/res/layout/activity_skycontroller2.xml
@@ -6,7 +6,7 @@
     tools:context=".activity.BebopActivity"
     android:id="@+id/piloting_view">
 
-    <com.parrot.sdksample.view.BebopVideoView
+    <ch.epfl.droneproject.view.BebopVideoView
         android:id="@+id/videoView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
@@ -16,23 +16,6 @@
         android:text="Emergency"
         android:id="@+id/emergencyBt"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:width="150dp"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Take picture"
-        android:id="@+id/takePictureBt"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:width="150dp"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/takeOffOrLandBt"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:width="150dp"/>
 
