--- a/app/src/main/res/layout/activity_skycontroller2.xml
+++ b/app/src/main/res/layout/activity_skycontroller2.xml
@@ -97,6 +97,7 @@ android:layout_height="match_parent">
             android:layout_height="56dp"
             android:layout_alignParentBottom="true"
             android:background="@android:color/black"
+            android:focusable="false"
             android:inputType="none"
             android:scrollbarAlwaysDrawHorizontalTrack="false"
             android:scrollbarAlwaysDrawVerticalTrack="false"
