--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="epfl.ch.droneproject.MainActivity">
+    tools:context=".activity.MainActivity"
+    tools:layout_editor_absoluteX="8dp"
+    tools:layout_editor_absoluteY="8dp">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="368dp"
         android:layout_height="495dp"
+        android:layout_centerInParent="true"
         android:layout_margin="5dp"
+        android:contentDescription="@string/logo_content"
         app:srcCompat="@drawable/logo_epfl"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp" />
-</android.support.constraint.ConstraintLayout>
+        tools:layout_editor_absoluteX="207dp"
+        tools:layout_editor_absoluteY="303dp" />
+</RelativeLayout>
