--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -10,68 +10,73 @@
         android:id="@+id/videoView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
     <Button
+        android:id="@+id/emergencyBt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Emergency"
-        android:id="@+id/emergencyBt"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:width="150dp"/>
+        android:width="150dp"
+        android:text="@string/emergency" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="SkyController Battery: "
         android:id="@+id/skyBatteryText"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textColor="#ff0000" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/controllerBattery"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="XXX%"
+        android:textColor="#ff0000"
+        tools:ignore="RtlHardcoded" />
+
+    <TextView
         android:id="@+id/skyBatteryLabel"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/skyBatteryText"
-        android:layout_toEndOf="@id/skyBatteryText"
-        android:textColor="#ff0000" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@id/skyBatteryText"
+        android:layout_toRightOf="@id/skyBatteryText"
+        android:text="@string/defaultBattery"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Drone battery: "
+        android:textColor="#ff0000"
+        tools:ignore="RtlHardcoded" />
+
+    <TextView
         android:id="@+id/droneBatteryText"
-        android:layout_below="@id/skyBatteryText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="#ff0000" />
+        android:layout_below="@id/skyBatteryText"
+        android:text="@string/droneBattery"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#ff0000"
+        tools:ignore="RtlHardcoded" />
 
     <TextView
+        android:id="@+id/droneBatteryLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="XXX%"
-        android:id="@+id/droneBatteryLabel"
         android:layout_below="@id/skyBatteryLabel"
-        android:layout_toRightOf="@+id/droneBatteryText"
         android:layout_toEndOf="@+id/droneBatteryText"
-        android:textColor="#ff0000" />
+        android:layout_toRightOf="@+id/droneBatteryText"
+        android:text="@string/defaultBattery"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#ff0000"
+        tools:ignore="RtlHardcoded" />
 
     <TextView
         android:id="@+id/droneConnectionLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="gone"
-        android:text="Waiting for a drone"
+        android:text="@string/waiting"
+        android:textColor="@color/secondary_text"
         android:textSize="25sp"
-        android:textColor="@color/secondary_text"/>
+        android:visibility="gone" />
 
     <ch.epfl.droneproject.view.ConsoleView
         android:id="@+id/console"
