--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -13,6 +13,27 @@ tools:context="ch.epfl.droneproject.activity.MapsFragment" >
 
 
     <LinearLayout
+        android:id="@+id/flightplan_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_marginBottom="48dp"
+        android:background="#80000000"
+        android:orientation="vertical"
+        android:padding="4dp"
+        android:visibility="visible">
+
+        <TextView
+            android:id="@+id/flightplan_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:textColor="@android:color/white" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/markerPanel"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
@@ -119,6 +140,24 @@ tools:context="ch.epfl.droneproject.activity.MapsFragment" >
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/listPanel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_marginBottom="48dp"
+        android:background="@android:color/white"
+        android:orientation="horizontal"
+        android:padding="4dp"
+        android:visibility="gone">
+
+
+        <ListView
+            android:id="@+id/flightplanList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -143,12 +182,12 @@ tools:context="ch.epfl.droneproject.activity.MapsFragment" >
             android:background="#aaa" />
 
         <Button
-            android:id="@+id/B"
+            android:id="@+id/save_button"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_horizontal|center_vertical"
-            android:text="@string/title_activity_maps" />
+            android:text="@string/save" />
 
         <View
             android:id="@+id/VerticalLine2"
