--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -25,7 +25,7 @@ tools:context="ch.epfl.droneproject.activity.MapsFragment" >
 
         <TextView
             android:id="@+id/flightplan_text"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
