lot of modification making opencv blob detection working

--- a/app/src/main/res/layout/activity_sky_controller.xml
+++ b/app/src/main/res/layout/activity_sky_controller.xml
@@ -34,16 +34,34 @@
             android:layout_width="match_parent"
             android:layout_height="fill_parent" />
 
-        <Button
-            android:id="@+id/emergencyBt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:width="150dp"
-            android:background="@drawable/emergency_btn"
-            android:textColor="#ffff0000"
-            android:text="@string/emergency" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/autopilot"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:width="150dp"
+                android:background="@drawable/emergency_btn"
+                android:text="@string/engageap"
+                android:textColor="#ffff0000" />
+
+            <Button
+                android:id="@+id/emergencyBt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:width="150dp"
+                android:background="@drawable/emergency_btn"
+                android:text="@string/emergency"
+                android:textColor="#ffff0000" />
+        </LinearLayout>
 
     </RelativeLayout>
 
