--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"/>
 
 
-    <ch.epfl.droneproject.view.CVClassifierView
+    <ch.epfl.droneproject.view.OpenCVView
         android:id="@+id/cvcView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
