--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -23,9 +23,11 @@
         android:id="@+id/skyBatteryText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentTop="false"
+        android:layout_marginBottom="56dp"
         android:text="@string/controllerBattery"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#ff0000"
@@ -35,7 +37,9 @@
         android:id="@+id/skyBatteryLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="false"
+        android:layout_marginBottom="56dp"
         android:layout_toEndOf="@id/skyBatteryText"
         android:layout_toRightOf="@id/skyBatteryText"
         android:text="@string/defaultBattery"
@@ -47,9 +51,7 @@
         android:id="@+id/droneBatteryText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/skyBatteryText"
+        android:layout_above="@id/skyBatteryText"
         android:text="@string/droneBattery"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#ff0000"
@@ -59,7 +61,7 @@
         android:id="@+id/droneBatteryLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/skyBatteryLabel"
+        android:layout_above="@id/skyBatteryLabel"
         android:layout_toEndOf="@+id/droneBatteryText"
         android:layout_toRightOf="@+id/droneBatteryText"
         android:text="@string/defaultBattery"
