--- a/app/src/main/res/drawable/splash.xml
+++ b/app/src/main/res/drawable/splash.xml
@@ -3,7 +3,7 @@
     android:opacity="opaque">
     <item>
         <bitmap
-            android:gravity="center"
+            android:gravity="fill_horizontal|fill_vertical"
             android:src="@drawable/loading"
             />
     </item>
